add_library(server STATIC
	botlib/aas_bsp.cpp
	botlib/aas_cluster.cpp
	botlib/aas_debug.cpp
	botlib/aas_entity.cpp
	botlib/aas_file.cpp
	botlib/aas_main.cpp
	botlib/aas_move.cpp
	botlib/aas_optimize.cpp
	botlib/aas_reach.cpp
	botlib/aas_route.cpp
	botlib/aas_routealt.cpp
	botlib/aas_sample.cpp
	botlib/ai_character.cpp
	botlib/ai_chat.cpp
	botlib/ai_genetic.cpp
	botlib/ai_goal.cpp
	botlib/ai_move.cpp
	botlib/ai_weapon.cpp
	botlib/ai_weight.cpp
	botlib/ea.cpp
	botlib/interface.cpp
	botlib/libvar.cpp
	botlib/log.cpp
	botlib/struct.cpp
	et/ETEntity.cpp
	et/ETPlayerState.cpp
	et/game.cpp
	hexen2/effect.cpp
	hexen2/game.cpp
	progsvm/common_builtins.cpp
	progsvm/edict.cpp
	progsvm/execute.cpp
	progsvm/main.cpp
	quake/game.cpp
	quake_hexen/game.cpp
	quake_hexen/init.cpp
	quake_hexen/main.cpp
	quake_hexen/move.cpp
	quake_hexen/nchan.cpp
	quake_hexen/physics.cpp
	quake_hexen/send.cpp
	quake_hexen/world.cpp
	quake2/ccmds.cpp
	quake2/entities.cpp
	quake2/game.cpp
	quake2/init.cpp
	quake2/main.cpp
	quake2/send.cpp
	quake2/user.cpp
	quake2/world.cpp
	quake3/game.cpp
	quake3/Quake3Entity.cpp
	quake3/Quake3PlayerState.cpp
	tech3/bot.cpp
	tech3/ccmds.cpp
	tech3/client.cpp
	tech3/Entity3.cpp
	tech3/game.cpp
	tech3/init.cpp
	tech3/main.cpp
	tech3/net_chan.cpp
	tech3/PlayerState3.cpp
	tech3/snapshot.cpp
	tech3/world.cpp
	wolfmp/game.cpp
	wolfmp/WolfMPEntity.cpp
	wolfmp/WolfMPPlayerState.cpp
	wolfsp/game.cpp
	wolfsp/WolfSPEntity.cpp
	wolfsp/WolfSPPlayerState.cpp
	link.cpp
	server_main.cpp
	worldsector.cpp
)
set_target_properties(server PROPERTIES COMPILE_FLAGS "${ALL_CFLAGS}")
add_dependencies(server common)
